--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bad-words": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ws": "^8.18.3"
