--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": "18.x"                          
+  },
   "dependencies": {
     "bad-words": "^4.0.0",
     "cors": "^2.8.5",
